# MLOpsProject

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  README.md  cloudbuild.yaml  data.dvc  index.html  mkdocs.yaml  objects.inv  pyproject.toml  tasks.py
.dvc/: config
.github/workflows/: docs.yml  lint-and-test.yaml  lint-test-build.yaml  lint.and-test.yaml  linting.yaml  tests.yaml
api/: index.html
configs/: dataset.yaml  gpu_train_vertex.yaml  train_config.yaml
configuration/: index.html
data/: index.html
dockerfiles/: api.dockerfile  test.dockerfile  train.dockerfile
docs/: README.md
docs/source/: api.md  configuration.md  data.md  evaluation.md  index.md  ops.md  overview.md  project-structure.md  quickstart.md  reference.md  tags.md  training.md
docs/source/reference/: api.md
docs/source/stylesheets/: extra.css
evaluation/: index.html
load_tests/: load_test_health.py  locustfile.py
notebooks/: data-investigation.ipynb  model_to_onnx.ipynb  model_train_cl.ipynb  model_train_mnrl.ipynb  model_train_mnrl_balanced.ipynb  model_train_mnrl_modernbert.ipynb
ops/: index.html
overview/: index.html
project-structure/: index.html
quickstart/: index.html
reference/: index.html
reference/api/: index.html
reports/: README.md
scripts/: load_test.py
search/: search_index.json
src/mlops_project/: api.py  build_index.py  data.py  evaluate.py  faiss_index.py  metrics.py  model.py  test_gcs_mount.py  train.py  utils.py  visualize.py
src/mlops_project/static/: index.html
stylesheets/: extra.css
tags/: index.html
tests/: __init__.py  conftest.py  test_api.py  test_data.py  test_faiss_index.py  test_model.py
training/: index.html
