[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "mlops_project"
version = "0.0.1"
description = "ML Ops Project"
authors = [
  { name = "DeepBois", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.2",
    "dvc[gs]>=3.66.1",
    "dvc-gdrive>=3.0.1",
    "fastapi==0.128.0",
    "hydra-core>=1.3.2",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "sentence-transformers>=5.2.0",
    "torch==2.9.1",
    "transformers[torch]>=4.57.3",
    "typer==0.15.1",
    "uvicorn[standard]==0.40.0",
    "wandb>=0.23.1",
    "requests>=2.32.5",
    "invoke>=2.2.1",
]

[dependency-groups]
dev = [
    "coverage==7.13.1",
    "invoke==2.2.1",
    "mkdocs-material==9.7.1",
    "mkdocs==1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-minify-plugin>=0.7.1",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "mkdocstrings-python==2.0.1",
    "mypy>=1.19.1",
    "ruff>=0.14.11",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120
exclude = ["notebooks/*.ipynb", "reports/report.py"]

[tool.mypy]
exclude = ["notebooks/*.ipynb", "reports/report.py"]

[tool.coverage.run]
omit = ["tests/*", "/tmp/*", "/private/*"]
